cloudformation-shdm/shdm-item10-rds-hapifhir.yaml
Description: PostgreSQL RDS Hapi Fhir - Camada Cloud

Parameters:
  DBInstanceID:
    Default: dbidhapifhir
    Description: Banco de Dados Hapi Fhir
    Type: String
    MinLength: '1'
    MaxLength: '63'
    AllowedPattern: '[a-zA-Z][a-zA-Z0-9]*'
    ConstraintDescription: >-
      Must begin with a letter and must not end with a hyphen or contain two
      consecutive hyphens.
  DBName:
    Default: dbhapifhir
    Description: Banco de Dados de Producao
    Type: String
  DBUser:
    Default: 'hapifhir'
    Type: String
  DBPassword:
    Default: 'hapifhirpass'
    Type: String
  DBidentifier: 
    Default: 'hapifhir'
    Type: String
  DBInstanceClass:
    Default: db.t3.micro
    Description: DB instance class
    Type: String
    ConstraintDescription: Must select a valid DB instance type.
  DBAllocatedStorage:
    Default: '20'
    Description: The size of the database (GiB)
    Type: Number
    MinValue: '5'
    MaxValue: '1024'
    ConstraintDescription: must be between 20 and 65536 GiB.

Resources:
  DBSubnetGroup:
    Type: 'AWS::RDS::DBSubnetGroup'
    Properties:
      DBSubnetGroupDescription: 'Hapi Fhir - DB'     
      SubnetIds: 
        - !ImportValue PrivSN1Id
        - !ImportValue PrivSN2Id
        - !ImportValue PrivSN3Id

  DatabaseSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: 'SG DB HAPIFHIR'
      VpcId: !ImportValue VpcId
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 5432
        ToPort: 5432
        CidrIp: 10.20.0.0/16    
      #- IpProtocol: tcp
      #  FromPort: 5432
      #  ToPort: 5432
      #  CidrIp: 10.30.0.0/16
      # Regra para liberar o acesso do Bastion Host, se localizado na camada Fog.  
      - IpProtocol: tcp
        FromPort: 5432
        ToPort: 5432
        CidrIp: 10.10.0.0/16          
  DBInstance: 
    DeletionPolicy: Snapshot
    Properties:
      DBSubnetGroupName: !Ref DBSubnetGroup
      AllocatedStorage: 
        Ref: DBAllocatedStorage
      DBInstanceClass: 
        Ref: DBInstanceClass
      DBName: 
        Ref: DBName
      Engine: postgres
      EngineVersion: "15.4"
      MasterUserPassword: 
        Ref: DBPassword
      MasterUsername: 
        Ref: DBUser
      DBInstanceIdentifier:
        Ref: DBidentifier
      PubliclyAccessible: "false"
      MultiAZ: "false"
      VPCSecurityGroups:
      - !Ref DatabaseSecurityGroup
    Type: "AWS::RDS::DBInstance"

Outputs:
  DBEndpoint:
    Description: 'The connection endpoint for the DB'
    Value: !GetAtt [DBInstance, Endpoint.Address]
    Export:
      Name: DBEndpoint
